# veil-client

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  lib.rs  libs.rs  main.rs  utils.rs
cli/src/commands/: indexer.rs  mod.rs  tx.rs
cli/src/commands/indexer/: mod.rs
cli/src/commands/key/: mod.rs
cli/src/commands/key/storage/: raw.rs
cli/src/commands/proof/: mod.rs
cli/src/commands/tx/: mod.rs
cli/src/key/: mod.rs  raw.rs
cli/src/solana/: mod.rs  query.rs  transaction.rs
cli/src/storage/: file.rs  mod.rs  raw.rs
cli/tests/: test.rs
client/: Cargo.toml  build.rs
client/elf/: methods
client/src/: main.rs  merkle.rs
indexer/: Cargo.toml
indexer/src/: event.rs  lib.rs  main.rs
indexer/src/api_handler/: handler.rs  mod.rs  tx.rs
indexer/src/client/: mod.rs  solana.rs
indexer/src/storage/: mod.rs
indexer/src/storage/db/: memdb.rs  mod.rs  rockdb.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: main.rs
types/: Cargo.toml
types/src/: curves.rs  lib.rs  merkle.rs  utils.rs  utxo.rs
