[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
solana-client = "2.2.3"
solana-program = "2.2.1"
solana-sdk = "2.2.1"
darksol = { path = "../../DarkSol/programs/DarkSol" }
types = { path = "../types" }
rand = "0.9.0"
borsh = "1.5.6"
spl-associated-token-account = { git = "https://github.com/solana-program/associated-token-account", rev = "1b1c0ebab3adaf57c0bca9c4a3522a76b9df632c"}
spl-token = { version="8.0.0", features = [ "no-entrypoint" ] }


