[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }

darksol = { workspace = true }
types = { path = "../types" }
rand = "0.9.0"
borsh = "1.5.6"

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
dirs = "6.0.0"
tokio = "1.44.1"
solana-program-test = "2.2.7"
