[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "4.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
starknet-crypto = "0.7.4"
borsh = {version = "1.5.5", features = ["derive"]}
primitive-types = "0.12"
rand = "0.9.0"
types = { path = "../types" }

[build-dependencies]
sp1-build = "4.0.0"