[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
futures = "0.3.31"
rocksdb = "0.23.0"

serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status = "2.2.4"
tokio = "1.44.1"
