[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
sp1-zkvm = "4.0.0"
ed25519-dalek = "2"
types = { path = "../types" }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-4.0.0" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0" }
