[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = {version = "1.5.5", features = ["derive"]}
starknet-crypto = "0.7.4"
ed25519-dalek = "2"
curve25519-dalek = "4"
sha2 = "0.10"
sha3 = "0.10"
aes-gcm = "0.10.3"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-4.0.0" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }