[package]
name = "veil_client_circuit"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
borsh = "1.5.5"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std'] }
solana-poseidon = "2.2.2"
types = { path = "../../types" }
